[tool.poetry]
name = "binarysearchsimulation"
version = "1.0.0"
description = "Python program to visualize the behavior of upper_bound and lower_bound binary searches."
authors = ["searleser97 <serchgabriel97@gmail.com>"]
license = "AGPL-3.0-only"
readme = 'README.md'
repository = "https://github.com/searleser97/BinarySearchSimulation"
homepage = "https://github.com/searleser97/BinarySearchSimulation"
keywords = ['competitive', 'programming', 'Binary', 'search']

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
binarysearchsimulation = 'binarysearchsimulation.command_line:main'
